--- a/css/index.css
+++ b/css/index.css
@@ -176,7 +176,7 @@ button:hover {cursor: pointer; }
 .blu {border-left: 10px solid #3a4172; padding-left: 20px; margin-right: 20px;}
 
 /* About Window CSS ---------------------------------------------------------------------------------------------------- */
-#about_window {max-width: 590px; width: 100%; height: 80%; max-height: 750px; top: 75px; background: #ececec; }
+#about_window {width: 600px; height: 80%; max-height: 800px; top: 75px; background: #ececec; }
 #about_wrapper {justify-content: center; align-items: center; contain: content; width: 100%; height: 100%; top: 25px;}
 #about_content {height: 100%; margin-top: 1%; display: flex; scroll-behavior: smooth; flex-wrap: nowrap; overflow-x: auto; width: 100%;}
 .slide {left: 0; padding: 40px; flex: 0 0 auto;  display: inline-block; height: 100%; width: 100%;  max-width: 610px; contain: content; }
