--- a/css/index.css
+++ b/css/index.css
@@ -139,7 +139,7 @@ button:hover {cursor: pointer; }
  .loading_scroller { border: 1px solid #2E345B; opacity: 50%; left: 20%; bottom: 10%; z-index: 200; background: #ededed; height: 25px; max-width: 68%; width: 0%; position: absolute;}
  
  /* Desktop Framework CSS ------------------------------------------------------------------------------- */
-.desktop {position: fixed; top: 0; left: 0; height: 100%; width: 100%; background-size: cover; background-image: url("../src/desktop_items/mountain_wallpaper.svg");  background-color: #2E345B; z-index: 0;}
+.desktop {position: fixed; top: 0; left: 0; height: 100%; width: 100%; background-size: cover; background-image: url("../src/desktop_items/mountain_wallpaper.svg");  background-color: #2E345B; z-index: 0; }
 #desktop_window_wrapper {width: 100%; height: 90%; top: 50px; position: fixed; z-index: 0;  margin: 60px 0px 60px 0px;  display: flex; justify-content: center; align-items: center;  }
 .desktop_toolbar {width: 100%; z-index: 10000; background-color: #2c2c2c; display: inline-block; height: 40px; display: flex; align-items: center; color: white; font-size: 16px; overflow: hidden; }
 #desktop_toolbar_left { width: 70%; float: left;  padding-left: 20px;}
@@ -152,6 +152,16 @@ button:hover {cursor: pointer; }
 .dock_container {position: fixed; width: 100%; bottom: 0; z-index: 2; display: flex; justify-content: center;} 
 .dock {bottom: 0; height: 100px; border-radius: 5px; width: 400px; border: 1px solid #2f335c; background-color: #707BA5; display: flex; justify-content: center; align-items: center; z-index: 200;}
 .dockIcons { display: table-cell; width: auto; height: 90px; padding: 10px; opacity: 1;}
+
+#mobile_dock_container {display: none; }
+
+.mobile_dock_container {position: fixed; width: 100vw !important; bottom: 0; z-index: 0; display: flex; justify-content: center; align-items: center;} 
+.mobileIcons { display: table-cell;  width: auto; height: 80px; margin: 10px;  opacity: 1; z-index: 1000;}
+.icon_label {color: white; position: absolute; text-align: center; bottom: 0; }
+.icon_button { height: 125px; width: 125px; text-align: center; display: flex; margin-right: 20px; justify-content: center; top: 0;}
+.app_label {color: white; transform: translate(0px, 110px); text-align: center; position: absolute; }
+
+
 
 .dock button:hover {transform: rotate(5deg); cursor: pointer;}
 .tooltip {position: relative; display: inline-block;}
@@ -169,10 +179,33 @@ button:hover {cursor: pointer; }
 #notification {right: 0px; z-index: 20; width: 500px; position: fixed; top: 50px; display: none; -webkit-animation:slide-in-right 15s cubic-bezier(.25,.46,.45,.94) both; animation:slide-in-right .5s cubic-bezier(.25,.46,.45,.94) both !important}     
 #notification:hover {cursor: pointer;}
 
+#mobile_notification_window {
+  width: 100%; 
+  height: 75px; 
+  top: 40px; 
+  z-index: 1000;
+  
+  position: fixed;
+  animation:slide-in-top 0.75s cubic-bezier(.25,.46,.45,.94) both;
+  
+}
+#mobile_notification img{
+  width: calc(100% - 10px); 
+  margin: 0px 5px;
+}
+
+#mobile_notif_close {
+  margin: 25px 0px 25px 0px;
+  width: 20px;
+  position: fixed;
+}
+
+
+
 /* Window CSS ------------------------------------------------------------------------------------------------------- */
-.window {width: 100%; border: #3A4172 1px solid; border-radius: 5px; height: 90%; background: #c6cadf;  -webkit-box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75); -moz-box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75); box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75); position: fixed; contain: content; z-index: 10;}
+.window {width: 100%; border: #3A4172 1px solid; border-radius: 5px; top: 40px; height: calc(100% - 180px); background: #c6cadf;  -webkit-box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75); -moz-box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75); box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75); position: fixed;  z-index: 10;}
 .case .window_closebar {position: sticky;}
-.window_closebar {height: 30px; width: 100%; contain: content; top: 0; cursor: move; background-color: #49588b; color: #f4f4f4; display: inline-block; overflow-x: hidden; border-bottom: #3A4172 1px solid; text-align: center; position: absolute; z-index: 20;}
+.window_closebar {height: 30px; width: 100%; contain: content; top: 0; cursor: move; background-color: #49588b; color: #f4f4f4; display: inline-block; overflow-x: hidden; border-bottom: #3A4172 1px solid; text-align: center; position: absolute; z-index: 20; }
 .window_closebar p {display: inline-block; margin-top: 5px;  color: #c6cadf;}
 .close_btn { height: 20px; left: 10px; top: 5px; position: absolute; } 
 .window_closebar img:hover {cursor: pointer; transform: scale(1.2)}
@@ -244,8 +277,8 @@ button:hover {cursor: pointer; }
 .mySlides {min-width: 100%; min-height: 100%;  display: flex; justify-content: center; text-align: center;}
 .slide_caption_wrapper {margin: auto; left: 25px; right: 25px; bottom: 100px; background: #c6cadf; font-family: 'GreycliffCF-Thin', sans-serif !important; position: absolute; height: 100px;  z-index: 2; }
 .slide_caption {font-family: 'GreycliffCF-ThinOblique', sans-serif; text-align: center;  margin: 0px; padding: 5px; font-size: 0.9rem;}
-.slide_caption_wrapper p {margin: 8px 0px 0px 0px; background: }
-.case_study_btn {position: absolute; top: 48px !important; width: 150px !important; z-index: 3000; height: unset !important; box-shadow: none !important; margin: 1px ! important;}
+.slide_caption_wrapper p {margin: 8px 0px 0px 0px;}
+.case_study_btn {position: absolute; width: 150px !important; z-index: 3000; height: unset !important; box-shadow: none !important; margin: -33px 0px 0px -22px;}
 .case_study_btn:hover {transform: scale(1.05); cursor: alias;}
 .finder_carousel{background: #707BA5; box-shadow: 0px -4px 7px gray; border-top: 1px solid #2f335c; width: 100%; height: 100px; position: absolute; bottom: 0; display: flex;  align-items: center; overflow-y: hidden; overflow-x: scroll;}
 .finder_carousel img {height: 80px; border: 1px solid #2f335c; box-shadow: 2px 2px 2px black; background: none; }
@@ -319,6 +352,7 @@ button:hover {cursor: pointer; }
 
 
 @media screen and (max-width: 500px) {
+  /* .page-wrapper {height: 100vh;} */
  #logo {max-width: 325px !important; width: 35%;}
   #finder_window {height: calc(100% - 150px);  top: 40px; }
   #finder_carousel {display: none;}
@@ -336,6 +370,8 @@ button:hover {cursor: pointer; }
   #about_window { top: 45px; height: calc(100% - 150px);  }
   #about_window h1 {font-size: 18px !important; line-height: 22px;}
   .about_section {margin: 15px; }
+  #mobile_dock_container {display: block !important;}
+
 }
 #about_window h1 {font-size: 1.25em !important; line-height: 1em; }
 
@@ -360,26 +396,232 @@ button:hover {cursor: pointer; }
 @-moz-keyframes bounce {0%, 20%, 50%, 80%, 100% {-moz-transform: translateY(0); transform: translateY(0);} 40% {-moz-transform: translateY(-30px); transform: translateY(-30px);} 60% { -moz-transform: translateY(-15px); transform: translateY(-15px);}}
 @-webkit-keyframes bounce {0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0); transform: translateY(0);} 40% {-webkit-transform: translateY(-30px);transform: translateY(-30px);} 60% {-webkit-transform: translateY(-15px); transform: translateY(-15px);}}
 @keyframes bounce {0%, 20%, 50%, 80%, 100% {-moz-transform: translateY(0); -ms-transform: translateY(0); -webkit-transform: translateY(0); transform: translateY(0);} 40% {-moz-transform: translateY(-30px); -ms-transform: translateY(-30px); -webkit-transform: translateY(-30px); transform: translateY(-30px);} 60% {-moz-transform: translateY(-15px); -ms-transform: translateY(-15px); -webkit-transform: translateY(-15px); transform: translateY(-15px);}}
+@-webkit-keyframes slide-in-top{0%{-webkit-transform:translateY(-1000px);transform:translateY(-1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}@keyframes slide-in-top{0%{-webkit-transform:translateY(-1000px);transform:translateY(-1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}
+.slide-in-top{-webkit-animation:slide-in-top 1s cubic-bezier(.25,.46,.45,.94) both;animation:slide-in-top 1s cubic-bezier(.25,.46,.45,.94) both}
+@-webkit-keyframes flip-2-hor-top-1{0%{-webkit-transform:translateY(0) rotateX(0);transform:translateY(0) rotateX(0);-webkit-transform-origin:50% 0;transform-origin:50% 0}100%{-webkit-transform:translateY(-100%) rotateX(-180deg);transform:translateY(-100%) rotateX(-180deg);-webkit-transform-origin:50% 100%;transform-origin:50% 100%}}@keyframes flip-2-hor-top-1{0%{-webkit-transform:translateY(0) rotateX(0);transform:translateY(0) rotateX(0);-webkit-transform-origin:50% 0;transform-origin:50% 0}100%{-webkit-transform:translateY(-100%) rotateX(-180deg);transform:translateY(-100%) rotateX(-180deg);-webkit-transform-origin:50% 100%;transform-origin:50% 100%}}
+.scale-in-center{-webkit-animation:scale-in-center .5s cubic-bezier(.25,.46,.45,.94) both;animation:scale-in-center .5s cubic-bezier(.25,.46,.45,.94) both}
+@-webkit-keyframes scale-in-center{0%{-webkit-transform:scale(0);transform:scale(0);opacity:1}100%{-webkit-transform:scale(1);transform:scale(1);opacity:1}}@keyframes scale-in-center{0%{-webkit-transform:scale(0);transform:scale(0);opacity:1}100%{-webkit-transform:scale(1);transform:scale(1);opacity:1}}
 
 
 
 /* MOBILE CSS */
 
 
-.mobile_icon_container {
-  position: fixed; width: 95%; height: 100%; max-height: 600px;  top: 50px; z-index: 5;
- white-space: nowrap;  display: flex; justify-content: center; display: none; 
+.mobile_icon_container {height: 60%; width: 100%; position: fixed; top: 60px; padding: 15px;
+  
+ display: none;
+}
 
+.mobile_grid_container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: 150px 150px;
+  justify-content: center;
+  grid-gap: 15px;
+  padding-left: 10px;
+  
+
+
+  
+}
+
+.mobile_grid_container > div{
+  
+  text-align: center;
+  height: 125px;
+  width: 110px;
+  display: flex; 
+  content: contain;
+ 
+}
+
+.mobile_grid_container > div img {
+  width: 100px;
+}
+
+.mobile_grid_container img {
+  width: 100px;
 }
 
 .mobile_icons {
-  width: 95%;
+  height: 125px; 
+  width: 100px;
+  
+}
+
+.mobile_icons img {
+  width: 100px;
   height: auto;
-  margin: 2.5%;
+}
+.cell img{height: auto; width: 100%;}
+
+
+#PreLoaderBar {
+  position: fixed; 
+  z-index: 100000;
+  bottom: 0;
+
+}
+.progress {
+  position: relative;
+  height: 10px;
+  display: block;
+  width: 100%;
+  background-color: white;
+  border-radius: 2px;
+  background-clip: padding-box;
+  /*margin: 0.5rem 0 1rem 0;*/
+  overflow: hidden;
+
+}
+.progress .indeterminate {
+background-color:black; }
+.progress .indeterminate:before {
+  content: '';
+  position: absolute;
+  background-color: #384272;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  will-change: left, right;
+  -webkit-animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+          animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite; }
+.progress .indeterminate:after {
+  content: '';
+  position: absolute;
+  background-color: #384272;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  will-change: left, right;
+  -webkit-animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+          animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+  -webkit-animation-delay: 1.15s;
+          animation-delay: 1.15s; }
+
+@-webkit-keyframes indeterminate {
+  0% {
+    left: -35%;
+    right: 100%; }
+  60% {
+    left: 100%;
+    right: -90%; }
+  100% {
+    left: 100%;
+    right: -90%; } }
+@keyframes indeterminate {
+  0% {
+    left: -35%;
+    right: 100%; }
+  60% {
+    left: 100%;
+    right: -90%; }
+  100% {
+    left: 100%;
+    right: -90%; } }
+@-webkit-keyframes indeterminate-short {
+  0% {
+    left: -200%;
+    right: 100%; }
+  60% {
+    left: 107%;
+    right: -8%; }
+  100% {
+    left: 107%;
+    right: -8%; } }
+@keyframes indeterminate-short {
+  0% {
+    left: -200%;
+    right: 100%; }
+  60% {
+    left: 107%;
+    right: -8%; }
+  100% {
+    left: 107%;
+    right: -8%; } }
+
+
+  #instagram_window {
+    max-width: 1000px;
+    height: calc(100% - 140px);
+    max-height: 1000px;
+    width: 100%;
+    
+    object-fit: contain;
+    background: #c6cADF;
+  }
+
+.instagram_main_grid {
   display: grid;
-  grid-template: repeat(3, 1fr) / repeat(3, 1fr);
-  grid-gap: 25px;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto;
+  column-gap: 1px;
+  row-gap: 1px;
+
+  
+}
+
+.instagram_main_grid > div {
+  text-align: center;
+
+
 }
 
 
-.cell img{height: auto; width: 100%;}
+
+.instagram_tile img {
+  object-fit: cover;
+  height: 120px; width: 120px;
+  top: 0; 
+  left: 0;
+}
+
+#photo_viewer{
+  height: calc(100% - 195px);
+  max-height: 940px;
+  max-width: 980px;
+  width: 100%;
+  background: #c6cADF;
+  top: 70px;
+  position: fixed;
+  
+  display: flex;
+  justify-content: center;
+  
+}
+.picture_slide {
+  height: calc(100% - 150px); 
+  top: 48px;
+  width: 90%; 
+  margin: 40px 0px 0px 5%;
+  text-align: center;
+ 
+  
+}
+
+
+
+.photo_frame img {
+  max-height: 700px;
+  height: 80%;
+  width: 100%;
+  object-fit: cover;
+  margin-bottom: 25px;
+  -webkit-box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75); -moz-box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75); box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75);
+}
+
+.photo_carousel {
+  width: 100%; 
+  height: 100px; 
+  bottom: -20px; 
+  background: white;
+  position: absolute;
+  display: inline-flex;
+  overflow-x: scroll;
+  overflow-y: hidden;
+ border: 5px solid white;
+}
+
+.photo_carousel .instagram_tile {
+  padding: 0px 5px;
+}
