--- a/css/index.css
+++ b/css/index.css
@@ -230,7 +230,7 @@ button:hover {cursor: pointer; color:# }
 .mail_button {background: #2f335c; padding: 10px 100px 10px 100px; bottom: 0px; margin-left: 40px; text-align: center;}
 
 /* Mobile App Container --------------------------------------------------------------------------------------------------- */
-.mobile_icon_container {height:60%; width:100%; position:fixed; top:20px; padding:30px; display:none}
+.mobile_icon_container {height:60%; width:100%; position:fixed; top:40px; padding:2%; display:none}
 .mobile_grid_container {display:grid; grid-template-columns:auto auto auto; grid-template-rows:125px 125px; justify-content:center; grid-gap:10px;padding-left:10px}
 .app_label {color:#fff; transform:translate(0,105px); text-align:center; position:absolute; font-family:'GreycliffCF-Regular',sans-serif!important}
 .mobile_grid_container>div {text-align:center; height:125px; width:110px; display:flex; content:contain}
@@ -238,6 +238,15 @@ button:hover {cursor: pointer; color:# }
 .mobile_grid_container img {width: 100px;}
 .mobile_icons {height: 125px; width: 100px; }
 .mobile_icons img {width: 100px; height: auto;}
+
+/* Social Media Link App Icon and window --------------------------------------------------------------------------------------------------- */
+#socials_mobile_window{height:375px; top:25%; padding: 2%; background:none; width:100%; border: none;}
+#socials_mobile_wrapper{border-radius:5px; border: #3A4172 1px solid; background:rgba(198,202,223,.85);height:100%;width:100%;padding:10px;text-align:center;color:#fff}
+.socials_mobile_container{display:grid;grid-template-columns:auto auto auto;grid-template-rows:100px 100px;justify-content:center;grid-gap:15px}
+.socials_mobile_container>div{text-align:center;height:90px;width:90px;display:flex;object-fit:contain}
+.socials_mobile_container img{height:90px}
+.social_app_label{color:#fff;transform:translate(0,90px);text-align:center;position:absolute;font-family:'GreycliffCF-Regular',sans-serif!important;font-size:14px}
+
 
 /* Finder Window---------------------------------------------------------------------------------------------------  */
 #instagram_window {max-width:1000px;height:calc(100% - 140px);max-height:1000px;width:100%;object-fit:contain;background:#c6cADF}
@@ -248,13 +257,6 @@ button:hover {cursor: pointer; color:# }
 .photo_carousel{width:100%; height:100px; bottom:-20px; background:#fff; position:absolute; display:inline-flex; overflow-x:scroll; overflow-y:hidden; border:5px solid #fff}
 .photo_carousel .instagram_tile{padding:0 5px}
 
-/* Social Media Link App Icon and window --------------------------------------------------------------------------------------------------- */
-#socials_mobile_window{height:42.5%;top:25%;background:none;width:90%;margin:5%}
-#socials_mobile_wrapper{border-radius:5px;background:rgba(198,202,223,.85);height:100%;width:100%;padding:10px;text-align:center;color:#fff}
-.socials_mobile_container{display:grid;grid-template-columns:auto auto auto;grid-template-rows:100px 100px;justify-content:center;grid-gap:15px}
-.socials_mobile_container>div{text-align:center;height:90px;width:90px;display:flex;object-fit:contain}
-.socials_mobile_container img{height:90px}
-.social_app_label{color:#fff;transform:translate(0,90px);text-align:center;position:absolute;font-family:'GreycliffCF-Regular',sans-serif!important;font-size:14px}
 
 /* terminal Window  */
 #terminal_window {height: 400px; width: 80vw; max-width: 700px; background-color: #3A4172; top: 30%; }
