--- a/css/index.css
+++ b/css/index.css
@@ -142,9 +142,10 @@ button:hover {cursor: pointer; color:# }
 .desktop {position: fixed; top: 0; left: 0; height: 100%; width: 100%; background-size: cover; background-image: url("../src/desktop_items/mountain_wallpaper.svg");  background-color: #2E345B; z-index: 0; }
 #desktop_window_wrapper {width: 100%; height: 90%; top: 50px; position: fixed; z-index: 0;  margin: 60px 0px 60px 0px;  display: flex; justify-content: center; align-items: center;  }
 .desktop_toolbar {width: 100%; z-index: 10000; background-color: #2c2c2c; display: inline-block; height: 40px; display: flex; align-items: center; color: white; font-size: 16px; overflow: hidden; }
-#desktop_toolbar_left { width: 70%; float: left;  padding-left: 20px;}
+#desktop_toolbar_left { width: 55%; float: left;  padding-left: 15px;}
+
 #desktop_toolbar_left a {padding-right: 10px;}
-#desktop_toolbar_right { width: 30%; text-align: right; padding-right: 10px; }
+#desktop_toolbar_right { width: 45%; text-align: right; padding-right: 15px; }
 #desktop_toolbar_mobile {width: 100%; text-align: center;}
 #desktop_toolbar_right img {height: 14px; padding-right: 5px; }
 #time {font-family: 'GreycliffCF-Light', sans-serif;}
@@ -362,6 +363,7 @@ button:hover {cursor: pointer; color:# }
 
 /* MOBILE QUERY  */
 
+.mobile_reveal {display: none;}
 
 @media screen and (max-width: 500px) {
   /* .page-wrapper {height: 100vh;} */
@@ -385,6 +387,7 @@ button:hover {cursor: pointer; color:# }
   #mobile_dock_container {display: block !important;}
   .window {top: 40px;}
   #photo_viewer{ top: 65px !important;}
+  #mobile_wifi {display: block; float: right;}
 }
 #about_window h1 {font-size: 1.25em !important; line-height: 1em; }
 
@@ -421,3 +424,55 @@ button:hover {cursor: pointer; color:# }
 
 
 
+.mobile_homepage {
+  height: 100vh;
+  width: 100vw;
+  background-size: 400%; background-position-x: 50%; background-repeat: no-repeat; background-position-y: bottom; background-image: url("../src/desktop_items/mountain_wallpaper.svg");  background-color: #2E345B;
+  top: 40px;
+  z-index: 1000000;
+  position: fixed; 
+  left: 0;
+  
+  
+  
+}
+
+.mobile_homepage_context { width: 100%; height: 70%; margin-top: 130px; display: flex; align-items: center; justify-content: center;}
+/* .mobile_homepage_context img {max-height: 100%;} */
+
+
+#mobile_logo {height: 65%; max-width: 240px;  animation: rotateStars 15s infinite; position: absolute; z-index: 3; }
+#mobile_moto {height: 100%;  max-height: 700px; width: 95%; max-width: 430px; }
+.mobile_time {width: 100%; font-size: 75px; color: white;  position: absolute;  }
+.mobile_toolbar {
+  width: 100%; 
+  height: 40px; 
+  text-align: center;
+  position: absolute; 
+  top: 0; 
+  color: white;
+  padding-top: 5px;
+  background: #2c2c2c; 
+}
+
+.mobile_time {
+  position: absolute; 
+  top: 30px; 
+  text-align: center;
+  width: 100%;
+  text-shadow: 3px 3px 8px #000;
+}
+
+#mobile_time {font-size: 5rem!important; font-family: 'GreycliffCF-Thin', sans-serif !important; line-height: 75px;}
+.unlock_mobile {
+
+  width: 100%; 
+  max-width: 500px;
+  background: #2c2c2c; 
+  height: 100px;
+  margin: 0px auto;
+  bottom: 0;
+  
+}
+.unlock_slide_container {border: 1px solid gray; border-radius: 5px; margin: 10px; height: 80px;}
+#unlock_container {height: 100px; width: 100%; bottom: 0; position: absolute; display: flex; align-items: center;}
