--- a/css/index.css
+++ b/css/index.css
@@ -112,8 +112,8 @@ button:hover {cursor: pointer; color:# }
 /* Homepage CSS ----------------------------------------------------------- */
 .homepage {background-color: #2E345B; background-image: url("../src/splash+contexts/stars_wallpaper.svg"); background-size: contain; background-repeat: repeat-y; height: 100%; width: 100%; opacity: 1; display: flex; justify-content: center; align-items: center; position: fixed; z-index: 20;}
 .homepage_context {width: 100%;  display: flex; align-items: center; justify-content: center;}
-#logo { width: 32%; max-width: 275px; animation: rotateStars 15s infinite; position: absolute; z-index: 3; }
-#entry_moto {max-width: 675px; width: 90%; animation: rotateStars 15s infinite;  position: absolute;}
+#logo { width: 32%; max-width: 275px; max-height: 60vh; animation: rotateStars 15s infinite; position: absolute; z-index: 3; }
+#entry_moto {max-width: 675px; max-height: 90vh; width: 90%; animation: rotateStars 15s infinite;  position: absolute;}
 .downArrow{height: 20px;}
 #bounce_arrow_button {height: 50px; width: 100%; z-index: 1200; position: fixed; bottom: 20px; display: flex; justify-content: center; align-items: center; }
 .social_banners_wrapper { width: 30%; max-width: 250px; min-width: 150px; bottom: 5%; left: 0; position: fixed;}
@@ -132,10 +132,10 @@ button:hover {cursor: pointer; color:# }
 .spinny {position: fixed; z-index: 7; max-width: 40px; opacity: 0;}
 
 /* Splash Pages CSS ------------------------------------------------------------------------------------ */
- #splash_pages {display: flex; justify-content: center; align-items: center; position: fixed; height: 100%; width: 100%;  }
- .splash_page_wrapper {display: flex; justify-content: center; align-items: center; max-height: 80%; }
- #splash_context_text {width: 95%; max-height: 900px; position: absolute; animation: rotateStars 15s infinite;}
- .splash_img {background: linear-gradient(0deg, rgba(47,51,92,1) 0%, rgba(198,202,223,1) 100%); width: 80%; max-width:1100px; margin-top: 2%; opacity: 1; position: absolute;}
+ #splash_pages {display: flex; justify-content: center; align-items: center; position: fixed; margin-top: 15vh; height: 70vh; width: 100%;  }
+ .splash_page_wrapper {display: flex; justify-content: center; align-items: center; }
+ #splash_context_text {width: 95%; max-height: 90vh; position: absolute; animation: rotateStars 15s infinite;}
+ .splash_img {background: linear-gradient(0deg, rgba(47,51,92,1) 0%, rgba(198,202,223,1) 100%); max-height: 60vh; max-width: 75vw; margin-top: 2%; opacity: 1; position: absolute;}
  .loading_scroller { border: 1px solid #2E345B; opacity: 50%; left: 20%; bottom: 10%; z-index: 200; background: #ededed; height: 25px; max-width: 68%; width: 0%; position: absolute;}
  
  /* Desktop Framework CSS ------------------------------------------------------------------------------- */
@@ -143,32 +143,28 @@ button:hover {cursor: pointer; color:# }
 #desktop_window_wrapper {width: 100%; height: 90%; top: 50px; position: fixed; z-index: 0;  margin: 60px 0px 60px 0px;  display: flex; justify-content: center; align-items: center;  }
 .desktop_toolbar {width: 100%; z-index: 10000; background-color: #2c2c2c; display: inline-block; height: 40px; display: flex; align-items: center; color: white; font-size: 16px; overflow: hidden; }
 #desktop_toolbar_left { width: 55%; float: left;  padding-left: 15px;}
-
 #desktop_toolbar_left a {padding-right: 10px;}
 #desktop_toolbar_right { width: 45%; text-align: right; padding-right: 15px; }
 #desktop_toolbar_mobile {width: 100%; text-align: center;}
 #desktop_toolbar_right img {height: 14px; padding-right: 5px; }
 #time {font-family: 'GreycliffCF-Light', sans-serif;}
 #desktop_toolbar_right img:hover {transform: scale(1.2);}
-.dock_container {position: fixed; width: 100%; bottom: 0; z-index: 2; display: flex; justify-content: center;} 
+.dock_container {position: fixed; width: 100%; bottom: 0px; z-index: 2; display: flex; justify-content: center;} 
 .dock {bottom: 0; height: 100px; border-radius: 5px; width: 400px; border: 1px solid #2f335c; background-color: #707BA5; display: flex; justify-content: center; align-items: center; }
 .dockIcons { display: table-cell; width: auto; height: 90px; padding: 10px; opacity: 1;}
 
 #mobile_dock_container {display: none; }
-
 .mobile_dock_container {position: fixed; width: 100vw !important; bottom: 0; z-index: 0; display: flex; justify-content: center; align-items: center;} 
 .mobileIcons { display: table-cell;  width: auto; height: 80px; margin: 10px;  opacity: 1; z-index: 1000;}
 .icon_label {color: white; position: absolute; text-align: center; bottom: 0; }
 .icon_button { height: 125px; width: 125px; text-align: center; display: flex; margin-right: 20px; justify-content: center; top: 0;}
-
-
 
 .dock button:hover {transform: rotate(5deg); cursor: pointer;}
 .tooltip {position: relative; display: inline-block;}
 .tooltip .tooltiptext {visibility: hidden; width: 100%; background-color: #c7ccde; color: #000; text-align: center; padding: 5px; border-radius: 6px; position: absolute; z-index: 1; bottom: 100%; opacity: 0; transition: opacity 0.3s;}
 .tooltip .tooltiptext::after {content: " "; position: absolute; top: 100%; left: 50%; margin-left: -10px; border: 7px solid; border-width: 9px; border-style: solid; border-color: #c7ccde transparent transparent transparent;}
 .tooltip:hover .tooltiptext {visibility: visible; opacity: 1;}
-.desktop_icon_container {position: fixed; width: 90%; height: 100%; z-index: 5;}
+.desktop_icon_container {position: fixed; width: 90%; height: 100%; z-index: 5; opacity: 0;}
 .desktop_icon_container img {max-width: 100px; width: 100%; padding-bottom: 10%;}
 .desktop_icon_container button:hover {transform: rotate(5deg); cursor: pointer;}
 .desktop_icons {position: fixed;}
@@ -204,8 +200,8 @@ button:hover {cursor: pointer; color:# }
 
 /* Window CSS ------------------------------------------------------------------------------------------------------- */
 .window {width: 100%; border: #3A4172 1px solid; border-radius: 5px; top: 60px; height: calc(100% - 180px); background: #c6cadf;  -webkit-box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75); -moz-box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75); box-shadow: 25px 6px 35px -28px rgba(0,0,0,0.75); position: fixed;  z-index: 10;}
-.case .window_closebar {position: sticky;}
-.window_closebar {height: 30px; width: 100%; contain: content; top: 0; cursor: move; background-color: #49588b; color: #f4f4f4; display: inline-block; overflow-x: hidden; border-bottom: #3A4172 1px solid; text-align: center; position: absolute; z-index: 20; }
+.case .window_closebar {position: absolute;}
+.window_closebar {height: 30px; width: 100%;  top: 0; cursor: move; background-color: #49588b; color: #f4f4f4; display: inline-block; overflow-x: hidden; border-bottom: #3A4172 1px solid; text-align: center; position: absolute; z-index: 20; }
 .window_closebar p {display: inline-block; margin-top: 5px;  color: #c6cadf;}
 .close_btn { height: 20px; left: 10px; top: 5px; position: absolute; } 
 .window_closebar img:hover {cursor: pointer; transform: scale(1.2)}
@@ -213,22 +209,61 @@ button:hover {cursor: pointer; color:# }
 
 /* About Window CSS ---------------------------------------------------------------------------------------------------- */
 
-#about_window {width: 98%; max-width: 700px; height: calc(100% - 150px); max-height:740px; background:#ececec}
+#about_window {width: 98%; max-width: 1000px; height: 50vh; max-height:740px; background:#ececec}
 .about_menu {width: 100%; bottom: 0px; position: absolute; height: 40px; background: #49588b; display: table; z-index: 10; }
 .about_menu_item {display: table-cell; padding: 10px;   text-align: center;}
-.about_content {height: calc(100% - 100px); top: 40px; margin: 25px;  z-index: 2;  display: flex; scroll-behavior: smooth;  overflow-x: hidden; }
-.about_inner_section {height:630px;  }
-.about_section {width: 100%; top: 20px;  }
+
+
+.about_content {height: calc(100% - 100px); margin-top: 40px;  z-index: 2;  display: flex;  align-items: center; scroll-behavior: smooth;  overflow: hidden; }
+.about_section { width: 100%; height: 100%; overflow-y: hidden;  align-items: center;  }
 #middle_about_menu_item {border: 1px solid white; border-style: none solid none solid;}
-#about_window h1 {font-size: 24px !important; font-family: 'GreycliffCF-Bold', sans-serif; line-height: 28px;}
+#about_window h1 {font-size: 28px !important; font-family: 'GreycliffCF-Bold', sans-serif; line-height: 30px;}
+
+.about_menu_item:hover {transform: scale(1.1);}
+
+.flex-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  padding: 0;
+  margin: 0px;
+  list-style: none;
+ 
+  
+
+ 
+}
+
+.flex-item {
+  
+  
+  width: 40vw;
+  margin: 2vw;
+  min-width: 325px;
+
+  
+ 
+}
+.mobile_column {
+  padding-left: 25px;
+}
+
+#section2 {text-align: center;}
+.flex-item li { 
+  list-style: none;
+}
+#section3 {margin-top: 100px;}
+
 
 
 /* Contact Window CSS --------------------------------------------------------------------------------------------------- */
 #contact_window {height: 550px; max-width: 400px; top: 25%; contain: content; overflow: hidden;}
-#contact_window_content p {padding-left: 5%; padding-right: 5%; }
+#contact_window_content {margin-top: 30px;}
+#contact_window_content p {padding: 0% 5%; }
 #contact_window_content img {height: 80px; padding-left: 20px; }
 #contact_window_content img:hover {transform: scale(1.1); cursor: alias;}
 .mail_button {background: #2f335c; padding: 10px 100px 10px 100px; bottom: 0px; margin-left: 40px; text-align: center;}
+.mail_button:hover {padding: 15px 100px;}
 
 /* Mobile App Container --------------------------------------------------------------------------------------------------- */
 .mobile_icon_container {height:60%; width:100%; position:fixed; top:40px; padding:2%; display:none}
@@ -388,8 +423,11 @@ button:hover {cursor: pointer; color:# }
   .window {top: 40px;}
   #photo_viewer{ top: 65px !important;}
   #mobile_wifi {display: block; float: right;}
+  .mobile_column {padding-left: 0!important;}
+  #about_window {width: 100%;}
+  .about_content {overflow-y: scroll!important;}
+#about_window h1 {font-size: 1.25em !important; line-height: 1em; 
 }
-#about_window h1 {font-size: 1.25em !important; line-height: 1em; }
 
 
 @keyframes type {0% {width: 0;} 99.9% {border-right: .15em solid #c6cADF;} 100% {border: none;}}
