--- a/css/index.css
+++ b/css/index.css
@@ -68,7 +68,7 @@
 }
 
 
-html {width: 100%; height: 100%;}
+html {width: 100%; height: 100%vh;}
 #viewport {width: 100vw; height: 100vh; position: fixed; display: block;}
 #portfolio_page_wrapper {padding: 0px; position: absolute; left: 0; top: 0; width: 100%; height: 2000vh; scroll-behavior: smooth;}
 #container {height: 2000vh; position: fixed;}
@@ -165,7 +165,7 @@ button:hover {cursor: pointer; color:# }
 .tooltip .tooltiptext::after {content: " "; position: absolute; top: 100%; left: 50%; margin-left: -10px; border: 7px solid; border-width: 9px; border-style: solid; border-color: #c7ccde transparent transparent transparent;}
 .tooltip:hover .tooltiptext {visibility: visible; opacity: 1;}
 .desktop_icon_container {position: fixed; width: 90%; height: calc(100% - 150px); z-index: 5; opacity: 0;top: 50px;}
-.desktop_icon_container img {max-width: 100px; width: 100%; padding-bottom: 10%;}
+.desktop_icon_container img {width: 100px; height: 110px; padding-bottom: 5%;}
 .desktop_icon_container button:hover {transform: rotate(5deg); cursor: pointer;}
 .desktop_icons {position: fixed;}
 .star_wallpaper {width: 100%; top: 50px; margin: auto; position: fixed; z-index: 0; }
@@ -244,7 +244,7 @@ button:hover {cursor: pointer; color:# }
 .mobile_grid_container>div {text-align:center; height:125px; width:110px; display:flex; content:contain}
 .mobile_grid_container > div img {width: 100px;}
 .mobile_grid_container img {width: 100px;}
-.mobile_icons {height: 125px; width: 100px; }
+.mobile_icons {height: 125px; width: 100px; opacity: 0; }
 .mobile_icons img {width: 100px; height: auto;}
 
 /* Social Media Link App Icon and window --------------------------------------------------------------------------------------------------- */
@@ -317,7 +317,7 @@ button:hover {cursor: pointer; color:# }
 .artboard{height: 500px; padding: 50px;}
 .case {width: 95%; max-width: 1100px; height: calc(100% - 200px); top: 50px; background-color: #ececec; background-size: contain; overflow: auto;}
 .artboard img {  margin: 0% 1% 1% 0%;}
-.project_h1 {margin-top: 25px;}
+
 .caption {font-family: 'GreycliffCF-ThinOblique', sans-serif; text-align: center; margin: 1% 0px 100px 0px; font-size: 1rem; }
 .artboard_bottom {margin-top: 100px; margin-bottom: 50px;}
 .artboard_bottom p {text-align: center; padding: 0px 30px 0px 30px} 
@@ -407,7 +407,7 @@ button:hover {cursor: pointer; color:# }
   .about_col_left img {margin-top: 35px;}
   .about_section {width: 100%;}
   .photo_frame img{max-height:700px; height:80%; width:100%; object-fit:cover;}
-  .project_h1 {margin-top: 25px;}
+  
 }
 
 
@@ -442,6 +442,10 @@ button:hover {cursor: pointer; color:# }
 @-webkit-keyframes blink-1{0%,50%,100%{opacity:1}25%,75%{opacity:0.25}}@keyframes blink-1{0%,50%,100%{opacity:1}25%,75%{opacity:0.25}}
 .slide-in-fwd-center{-webkit-animation:slide-in-fwd-center .4s cubic-bezier(.25,.46,.45,.94) both;animation:slide-in-fwd-center .4s cubic-bezier(.25,.46,.45,.94) both}
 @-webkit-keyframes slide-in-fwd-center{0%{-webkit-transform:translateZ(-1400px);transform:translateZ(-1400px);opacity:0}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}@keyframes slide-in-fwd-center{0%{-webkit-transform:translateZ(-1400px);transform:translateZ(-1400px);opacity:0}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}
+.slide-in-fwd-bottom{-webkit-animation:slide-in-fwd-bottom .4s cubic-bezier(.25,.46,.45,.94) both;animation:slide-in-fwd-bottom .4s cubic-bezier(.25,.46,.45,.94) both}
+@-webkit-keyframes slide-in-fwd-bottom{0%{-webkit-transform:translateZ(-1400px) translateY(800px);transform:translateZ(-1400px) translateY(800px);opacity:0}100%{-webkit-transform:translateZ(0) translateY(0);transform:translateZ(0) translateY(0);opacity:1}}@keyframes slide-in-fwd-bottom{0%{-webkit-transform:translateZ(-1400px) translateY(800px);transform:translateZ(-1400px) translateY(800px);opacity:0}100%{-webkit-transform:translateZ(0) translateY(0);transform:translateZ(0) translateY(0);opacity:1}}
+.slide-in-bck-center{-webkit-animation:slide-in-bck-center .7s cubic-bezier(.25,.46,.45,.94) both;animation:slide-in-bck-center .7s cubic-bezier(.25,.46,.45,.94) both}
+@-webkit-keyframes slide-in-bck-center{0%{-webkit-transform:translateZ(600px);transform:translateZ(600px);opacity:0}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}@keyframes slide-in-bck-center{0%{-webkit-transform:translateZ(600px);transform:translateZ(600px);opacity:0}100%{-webkit-transform:translateZ(0);transform:translateZ(0);opacity:1}}
 /* MOBILE CSS */
 
 
@@ -487,7 +491,7 @@ button:hover {cursor: pointer; color:# }
 
 #mobile_time {font-size: 5rem!important; font-family: 'GreycliffCF-Thin', sans-serif !important; line-height: 75px;}
 .unlock_mobile {
-
+  position: fixed;
   width: 100%; 
   max-width: 500px;
   background: #2c2c2c; 
