--- a/css/index.css
+++ b/css/index.css
@@ -68,7 +68,7 @@
 }
 
 
-html {width: 100%; height: 100%vh;}
+html {width: 100vw; height: 2000vh;}
 #viewport {width: 100vw; height: 100vh; position: fixed; display: block;}
 #portfolio_page_wrapper {padding: 0px; position: absolute; left: 0; top: 0; width: 100%; height: 2000vh; scroll-behavior: smooth;}
 #container {height: 2000vh; position: fixed;}
